# scene-boundary-detection

./: pyproject.toml
sbd/: exceptions.py
sbd/cli/: main.py
sbd/common/models/: __init__.py  hdf5_dataset.py  parquet_dataset.py
sbd/dtw/: distance.py  dtw.py  plot.py  utils.py
sbd/screenplay/: exceptions.py  models.py  parser.py  typings.py  utils.py
sbd/shared/models/: __init__.py  hdf5_dataset.py  parquet_dataset.py  timestamp.py
sbd/shared/utils/: timedelta.py
sbd/sprite/: annotate_sprites.py  dataset.py  exceptions.py  extract_sprite_sheets.py  extract_sprites.py  mhtml.py  models.py  parser.py  utils.py
sbd/sprite/extractor/: __init__.py  base.py  exceptions.py  extractors.py  mhtml.py  video.py
sbd/sprite/extractor/filehandler/: base.py  mhtml.py  models.py  utils.py  video.py
sbd/subtitle/: dataset.py  exceptions.py  models.py  parser.py  typings.py  utils.py  utterance.py
sbd/subtitle/extractor/: __init__.py  base.py  exceptions.py  extractors.py  srt.py  utterance.py
sbd/subtitle/extractor/filehandler/: ass.py  base.py  models.py  srt.py  utils.py  video.py
sbd/utils/: counter.py  detect_encoding.py  gpu_check.py
tests/: test_dtw.py  test_sprite.py  test_subtitle.py
