[project]
name = "scene-boundary-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chardet>=7.4.3",
    "opencv-python>=4.13.0.92",
]

[tool.setuptools.packages.find]
include = ["sbd"]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
