[project]
name = "scene-boundary-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chardet>=7.4.3",
    "ffmpeg-python>=0.2.0",
    "h5py>=3.16.0",
    "matplotlib>=3.11.0",
    "matplotlib-label-lines>=0.8.1",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "polars>=1.42.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.6.0",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["sbd"]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.dependency-metadata]]
name = "torch"
version = "2.6.0+cu126"
requires-python = ">=3.9.0"
requires-dist = [
    'filelock',
    'typing-extensions>=4.10.0',
    'setuptools; python_version >= "3.12"',
    'sympy==1.13.1; python_version >= "3.9"',
    'networkx',
    'jinja2',
    'fsspec',
    'nvidia-cuda-nvrtc-cu12==12.6.77; platform_system == "Linux" and platform_machine == "x86_64"',
    'nvidia-cuda-runtime-cu12==12.6.77; platform_system == "Linux" and platform_machine == "x86_64"',
    'nvidia-cuda-cupti-cu12==12.6.80; platform_system == "Linux" and platform_machine == "x86_64"',
    'nvidia-cudnn-cu12==9.5.1.17; platform_system == "Linux" and platform_machine == "x86_64"',
    'nvidia-cublas-cu12==12.6.4.1; platform_system == "Linux" and platform_machine == "x86_64"',
    'nvidia-cufft-cu12==11.3.0.4; platform_system == "Linux" and platform_machine == "x86_64"',
    'nvidia-curand-cu12==10.3.7.77; platform_system == "Linux" and platform_machine == "x86_64"',
    'nvidia-cusolver-cu12==11.7.1.2; platform_system == "Linux" and platform_machine == "x86_64"',
    'nvidia-cusparse-cu12==12.5.4.2; platform_system == "Linux" and platform_machine == "x86_64"',
    'nvidia-cusparselt-cu12==0.6.3; platform_system == "Linux" and platform_machine == "x86_64"',
    'nvidia-nccl-cu12==2.21.5; platform_system == "Linux" and platform_machine == "x86_64"',
    'nvidia-nvtx-cu12==12.6.77; platform_system == "Linux" and platform_machine == "x86_64"',
    'nvidia-nvjitlink-cu12==12.6.85; platform_system == "Linux" and platform_machine == "x86_64"',
    'triton==3.2.0; platform_system == "Linux" and platform_machine == "x86_64"',
    'optree>=0.13.0; extra == "optree"',
    'opt-einsum>=3.3; extra == "opt-einsum"',
]
provides-extras = [
    'optree',
    'opt-einsum'
]
